--- a/homework4/index.html
+++ b/homework4/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="index.js" defer></script>
+    <script src="index1.js" defer></script>
+    <script src="index2.js" defer></script>
+    <script src="index3.js" defer></script>
+    <script src="index4.js" defer></script>
+    <script src="index5.js" defer></script>
+    <script src="index6.js" defer></script>
+    <script src="index7.js" defer></script>
+    <script src="index8.js" defer></script>
+
 </head>
 <body>
     
